第一次修改  h1标签

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-body{
-    background: blue;
-}
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+</body>
+</html>
